# goit_dsml-hw-02

task1/: Dockerfile  docker-compose.yml  instruction.txt  postgres_c.py  pyproject.toml  requirements.txt  seed.py  sql_create.txt  sql_to_execute.txt
task2/: instruction2 - task2.txt  main.py  pyproject.toml  requirements.txt
